frontend/src/styles/LiveGame.scss
@import "./mixins";

.game {
  display: flex;
  flex-direction: column;
  height: 100%;

  &__container {
    width: 100%;
    height: 100%;

    @include game-screen {
      display: grid;
      grid-template-areas:
        "moves board topclock"
        "moves board bottomclock"
        "moves board drawresign"
        "moves board chat";
      grid-template-columns: 1fr min(100%, 30rem, 75vh) 1fr;
      grid-auto-rows: min-content min-content min-content 1fr;
      column-gap: 1rem;
    }
  }
}

.live-moves-container {
  padding: 1rem;
  grid-area: moves;
  height: 20rem;

  @include game-screen {
    height: unset;
  }
}

.board-container {
  grid-area: board;

  @include game-screen {
    width: unset;
    height: unset;
  }
}

.top-blank {
  height: 0;
  grid-area: topblank;

  @include game-screen {
    height: 1rem;
  }
}

.bottom-blank {
  height: 0;
  grid-area: bottomblank;

  @include game-screen {
    height: 1rem;
  }
}

.clock-container {
  padding-inline: 1rem;
}

.clock-container.top {
  grid-area: topclock;
}

.clock-container.bottom {
  grid-area: bottomclock;
}

.draw-resign-container {
  grid-area: drawresign;
  display: flex;
  justify-content: center;
  align-items: center;

  .draw-resign {
    background-color: var(--clr-bg-200);
    border-radius: var(--br-primary);
    padding: 0.75rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 0.5rem;
    margin-top: 1rem;
    color: var(--clr-text-primary);
    max-width: 100%;

    button {
      width: 2rem;
      height: 2rem;
      border: none;
      background-color: transparent;
      display: flex;
      justify-content: center;
      align-items: center;
      cursor: pointer;
      border-radius: var(--br-primary);
      padding: 0.25rem;

      &.confirming {
        background-color: var(--clr-accent);
      }

      &.is-rejector img {
        height: 75%;
      }

      img {
        height: 100%;
      }

      &:hover {
        opacity: 0.8;
      }
    }

    .draw-request-buttons {
      margin-left: 1rem;
      display: flex;
      gap: 0.25rem;

      button {
        padding: 0.375rem;
        background-color: var(--clr-bg-300);
      }

      .accept-draw:hover {
        background-color: var(--clr-accent);
        opacity: 1;
      }

      .decline-draw:hover {
        background-color: var(--clr-error);
        opacity: 1;
      }
    }
  }
}

.chat-container {
  grid-area: chat;
  height: 20rem;
  padding: 1rem;
  @include game-screen {
    height: auto;
  }
}

.create-game-container {
  grid-row: 1 / 5;
  grid-column: 3 / 3;
  padding: 1rem;
}

.waiting-container {
  grid-row: 1 / 5;
  grid-column: 3 / 3;
  padding: 1rem;

  .waiting {
    height: 100%;
    background-color: var(--clr-bg-200);
    border-radius: var(--br-primary);
    color: var(--clr-text-primary);
    padding: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1rem;
    text-align: center;
  }

  button {
    @include button(var(--fs-400));
    background-color: var(--clr-error);
    border: none;
    color: var(--clr-text-primary);
  }
}

